--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/ticket_app?serverTimezone=UTC
-db.user=root
-db.password=123123
+db.driver=DATABASE_DRIVER
+db.url=DATABASE_URL
+db.user=rDATABASE_USERNAME
+db.password=DATABASE_PASSWORD
 
 #Hibernate properties
 hibernate.show_sql=true
